# rozproszenie-aplikacji

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main_cleanup.py  main_read.py  main_write.py  pyproject.toml
app/: config.py  database.py  main.py  messaging.py  models.py  router.py  service.py  shortener.py  store.py
