[project]
name = "url-shortener"
version = "0.1.0"
description = "Simple URL shortener for distributed systems course"
authors = [ { name = "Student" } ]
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "pydantic>=2.3",
  "pydantic-settings>=0.2",
  "httpx>=0.24",
  "pytest>=7.0"
]

[tool.ruff]
line-length = 88
